# advanced-fetch-mcp

./: .env.example  .gitignore  AGENTS.md  README.en.md  README.md  advanced_fetch_entry.py  pyproject.toml
.fetch-browser-profile/: Local State
.fetch-browser-profile/Default/: Favicons  History  Preferences  Secure Preferences  Top Sites  Web Data
.fetch-browser-profile/Default/DawnGraphiteCache/: data_1  index
.fetch-browser-profile/Default/DawnWebGPUCache/: data_1  index
.fetch-browser-profile/Default/Extension Rules/: LOG
.fetch-browser-profile/Default/Extension Scripts/: LOG
.fetch-browser-profile/Default/Extension State/: LOG
.fetch-browser-profile/Default/GPUCache/: data_1  index
.fetch-browser-profile/Default/Network/: Cookies  Network Persistent State  Reporting and NEL  TransportSecurity
.fetch-browser-profile/GrShaderCache/: data_0  data_1  f_000001  index
.fetch-browser-profile/GraphiteDawnCache/: data_1  index
.fetch-browser-profile/ShaderCache/: data_1  index
.fetch-browser-profile/segmentation_platform/: ukm_db
advanced_fetch_mcp/: __init__.py  browser.py  config_meta.py  detection.py  docs_sync.py  dsl.py  env_loader.py  extract.py  fetch.py  params.py  sampling.py  server.py  settings.py  stealth.py  workflow.py
advanced_fetch_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: sync_docs.py
tests/: test_detection.py  test_docs_sync.py  test_dsl.py  test_extract.py  test_fetch_and_browser.py  test_sampling.py  test_server_integration.py  test_server_schema.py  test_workflow.py
tests/integration/: conftest.py  test_real_dynamic_fetch.py  test_real_extract.py  test_real_static_fetch.py
(+67 files in other folders)
