[project]
name = "advanced-fetch-mcp"
version = "0.1.0"
description = "An MCP server for advanced page fetch, text view extraction, prompt summarization, search windows, and page JavaScript evaluation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.0",
  "fastmcp>=2.12.0",
  "markdownify>=0.13.0",
  "playwright>=1.49.0",
  "pydantic>=2.8.0",
  "python-dotenv>=1.0.0",
  "requests>=2.32.0",
  "trafilatura>=1.12.0",
]

[project.scripts]
advanced-fetch-mcp = "advanced_fetch_entry:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["advanced_fetch_entry"]

[tool.setuptools.packages.find]
include = ["advanced_fetch_mcp*"]
