[project]
name = "advanced-fetch-mcp"
version = "0.2.0"
description = "An MCP server for dynamic page fetching, trafilatura-based extraction, in-page search, login-aware browser sessions, and JavaScript evaluation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastmcp>=2.12.0",
  "lxml>=5.3.0",
  "playwright>=1.49.0",
  "playwright-stealth>=1.0.6",
  "pydantic>=2.8.0",
  "python-dotenv>=1.0.0",
  "requests>=2.32.0",
  "trafilatura>=1.12.0",
  "urllib3>=2.2.0",
]

[project.scripts]
advanced-fetch-mcp = "advanced_fetch_entry:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["advanced_fetch_entry"]

[tool.setuptools.packages.find]
include = ["advanced_fetch_mcp*"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
